--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="font-size: min(24px, 5vw)">
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Karla:wght@700&display=swap" rel="stylesheet">
@@ -12,7 +11,7 @@
   <title>Tenzies</title>
 </head>
 
-<body>
+<body class="h-screen flex justify-center items-center bg-sky-950">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
